repaired resilancy